# rust-code-assistant

./: .gitignore  Cargo.toml  README.md  chunks.db
src/: main.rs
src/cli/: commands.rs
src/database/: sqlite.rs
src/embeddings/: embedder.rs
src/indexer/: chunker.rs  scanner.rs
src/rag/: llm.rs  mod.rs  prompt.rs  retriever.rs
src/search/: similarity.rs
