[package]
name = "rust-code-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
